This is a Changelog file in the form of a .txt file at : https://coolcatsites.github.io/catscommunity/changelog.txt"

12/13/23
- Added /sitemap.txt
- Added /aboutus.html
- Updated /aboutus.html