@@ -10,7 +10,7 @@
 <body>
     <center>
         <h1>About us</h1>
-        <p>Website made by <a href="https://coolcat8467.github.io">Cool cat</a></p>
+        <p class="txt-back">Website made by <a href="https://coolcat8467.github.io">Cool cat</a></p>
         </center> 
 </body>
 </html>
